Add docker context

--- a/.space/devfile.yaml
+++ b/.space/devfile.yaml
@@ -5,3 +5,14 @@ attributes:
   space:
     editor:
       type: PhpStorm
+  components:
+    - name: image-build
+      image:
+      # (Required)
+      imageName: oro-dev:latest
+      dockerfile:
+        # (Optional) path to Docker context relative to projectRoot
+        # by default, projectRoot is repository root
+        buildContext: docker
+        # (Required) path to Dockerfile relative to projectRoot
+        uri: docker/Dockerfile
